// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests Button Active 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-button"
    data-active={true}
  >
    Button
  </button>
</div>
`;

exports[`Storybook Tests Button Danger 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-button"
    data-variant="Danger"
  >
    Button
  </button>
</div>
`;

exports[`Storybook Tests Button Default 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-button"
  >
    Button
  </button>
</div>
`;

exports[`Storybook Tests Button Disabled 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-button"
    disabled={true}
  >
    Button
  </button>
</div>
`;

exports[`Storybook Tests Button Fixed 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-button"
    data-full-width={true}
  >
    Button
  </button>
</div>
`;

exports[`Storybook Tests Button Focus 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-button"
    onMouseOver={[Function]}
  >
    Mouse over to focus
  </button>
</div>
`;

exports[`Storybook Tests Button Link 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-button"
    to="#"
  >
    Button
  </button>
</div>
`;

exports[`Storybook Tests Button Navigation 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-button"
    data-variant="Navigation"
  >
    Button
  </button>
</div>
`;

exports[`Storybook Tests Button Nihongo 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-button"
  >
    日本語だよ
  </button>
</div>
`;

exports[`Storybook Tests Button Overlay 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-button"
    data-variant="Overlay"
  >
    Button
  </button>
</div>
`;

exports[`Storybook Tests Button Primary 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-button"
    data-variant="Primary"
  >
    Button
  </button>
</div>
`;

exports[`Storybook Tests Button Small 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-button"
    data-size="S"
  >
    Button
  </button>
</div>
`;
